[package]
name = "lindas-hydrodata-fetcher"
description = "Fetch water temperature measurements from the BAFU/FOEN LINDAS endpoint and forward them to the Gfrörli database."
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", features = ["form", "json"] }
rusqlite = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
